package domain

class Area(
    val x: Int,
    val y: Int,
    val width: Int,
    val height: Int
)